--- a/SIGETER/style.css
+++ b/SIGETER/style.css
@@ -318,3 +318,67 @@
     margin-top: 20px;
     font-size: 0.9rem;
   }
+
+/* About style */
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #f4f4f4;
+  color: #333;
+}
+.about-section h1 {
+  margin-bottom: 20px;
+}
+.about-content {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.about-item {
+  max-width: 400px;
+  text-align: left;
+}
+.team-section {
+  padding: 30px;
+  background-color: #fff;
+}
+.team-member {
+  display: inline-block;
+  margin: 20px;
+  text-align: center;
+}
+.team-member img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* Chart Style */
+.cart-item { 
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between; 
+  margin-bottom: 20px; 
+}
+.item-details {
+  flex-grow: 1; 
+  margin-left: 20px; 
+}
+.cart-summary {
+  margin-top: 30px; 
+  text-align: right; 
+}
+.remove-btn {
+  background-color: #ff4d4d; 
+  color: white; 
+  border: none; 
+  padding: 10px 15px; 
+  cursor: pointer; 
+}
+.remove-btn:hover {
+  background-color: #cc0000; 
+}
+input[type="number"] {
+  width: 50px; 
+}
