deletting category file dan update untuk ticket dll

--- a/SIGETER/style.css
+++ b/SIGETER/style.css
@@ -1,22 +1,30 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 0px;
     box-sizing: border-box;
   }
 
   body {
     font-family: Arial, sans-serif;
-    background-image: url(pict/concert.jpg);
-    background-size: 140%;
     color: #333;
+  }
+
+  .home {
+    background-image: url(pict/concert2.jpg);
+    background-size: 140%;
+  }
+
+  .p {
+    margin: 0;
+    padding-left: 10px;
   }
 
   /* Sidenav*/
   .sidenav_inx {
-    width: 130px;
+    width: 150px;
     position: left, ;
     z-index: 1;
-    top: 20px;
+    top: 10px;
     left: 10px;
     overflow-x: hidden;
     padding: 8px 0;
@@ -133,65 +141,6 @@
     background-color: #e6892a;
   }
   
-  /* Featured Products Section */
-  .featured-products {
-    padding: 50px 0;
-    text-align: center;
-    background-color: #fff;
-  }
-  
-  .featured-products h2 {
-    font-size: 2em;
-    margin-bottom: 30px;
-  }
-  
-  .product-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .product-item {
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ddd;
-    text-align: center;
-    width: 30%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  .product-item img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
-  
-  .product-item h3 {
-    font-size: 1.2em;
-    margin-top: 15px;
-  }
-  
-  .product-item p {
-    font-size: 1.1em;
-    margin-top: 10px;
-  }
-  
-  .product-item .btn-secondary {
-    background-color: #f79c42;
-    color: white;
-    padding: 8px 15px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 1em;
-    margin-top: 10px;
-    transition: background-color 0.3s;
-  }
-  
-  .product-item .btn-secondary:hover {
-    background-color: #e6892a;
-  }
-  
   /* About Us Section */
   .about-us {
     background-color: #f4f4f4;
@@ -265,7 +214,7 @@
   }
 
   footer {
-    background-color: #6a5acd;
+    background-color: #4b0082;
     color: white;
     padding: 20px 10px;
     margin-top: 30px;
