--- a/SIGETER/style.css
+++ b/SIGETER/style.css
@@ -11,38 +11,76 @@
 
   .home {
     background-image: url(pict/concert2.jpg);
-    background-size: 140%;
+    background-size: 1450px;
   }
 
-  .p {
-    margin: 0;
-    padding-left: 10px;
+
+  .par {
+    padding-left: 200px;
   }
+
+  .par h1 {
+    width: 1000px;
+    height: auto;
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -230px;
+    border-radius: 15px;
+    justify-content: center;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  }
+
+  .par p {
+    color: black;
+    display: flex;
+    padding: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    /* batas */
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    width: 1000px;
+    height: auto;
+  }
+
+  .par p title {
+    font-weight: bold;
+    font-size: 100px;
+    position: top;
+  }
+
+
 
   /* Sidenav*/
   .sidenav_inx {
-    width: 150px;
-    position: left, ;
-    z-index: 1;
-    top: 10px;
-    left: 10px;
-    overflow-x: hidden;
-    padding: 8px 0;
+    width: 13%;
+    height: 200px ;
+    margin-left: 20px;
+    margin-bottom: 80px;
+    margin-top: 100px;
+    border-radius: 10px;
+    font-size: 18px;
+    padding: 10px;
+    background-color: white;
+    color: #4b0082;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   }
 
   .sidenav_inx a {
-    margin-inline: 10px 0px;
-    padding: 5px 10px;
+    width: 100%;
     text-decoration: none;
-    font-size: 15px;
     font-weight: bold;
-    color:#4b0082;
-    display: block;
-    background-color: #D4BEE4;
+    margin: 16px;
+    font-size: 25px;
+    display: flex;
   }
 
   .sidenav_inx a:hover {
-    color: white;
+    color: violet;
   }
 
   @media screen and (max-height: 450px) {
@@ -52,14 +90,25 @@
   
   /* Header */
   header {
+    width: 100%;
+    height: auto;
     background-color: #4b0082; 
-    padding: 20px 30px; 
+    padding: 10px; 
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    width: 100% ;
+    margin-top: 0px;
   }
+  /* contoh */
+  /* width: 900px;
+    height: auto;
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -230px;
+    border-radius: 15px;
+    justify-content: center; */
 
   header .logo {
     font-size: 30px;
@@ -489,21 +538,26 @@ input[type="number"] {
   background-color: #45a049;
 }
 
-/* Event Category */
-.categories-section {
+/* Event Ticket */
+.ticket-section {
   text-align: center;
   padding: 50px 20px;
   background-color: #f9f9f9;
 }
+.ticket-section h1 {
+  margin-top: 25px;
+  font-size: 30px;
+}
 
-.category-container {
+.ticket-container {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 30px;
   justify-content: center;
   gap: 20px;
 }
 
-.category-item {
+.ticket-item {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -513,18 +567,18 @@ input[type="number"] {
   transition: transform 0.3s;
 }
 
-.category-item img {
+.ticket-item img {
   width: 100%;
   height: 180px;
   border-radius: 10px 10px 0 0;
 }
 
-.category-item h2 {
+.ticket-item h2 {
   margin: 15px 0;
   font-size: 24px;
 }
 
-.category-item p {
+.ticket-item p {
   color: #666;
   margin-bottom: 20px;
 }
@@ -559,7 +613,7 @@ p {
   color: #555;
 }
 .btn-primary {
-  background-color: #007bff;
+  background-color: slategray;
   color: white;
   padding: 10px 20px;
   text-decoration: none;
